--- a/package.json
+++ b/package.json
@@ -1,29 +1,19 @@
 {
-  "//1": "describes your app and its dependencies",
-  "//2": "https://docs.npmjs.com/files/package.json",
-  "//3": "updating this file will download and update your packages",
-  "name": "hello-express",
-  "version": "0.0.1",
-  "description": "A simple Node app built on Express, instantly up and running.",
+  "name": "müzikbotu",
+  "version": "0.2.6",
+  "description": "müzik botu",
   "main": "server.js",
   "scripts": {
+    "test": "node server.js",
     "start": "node server.js"
   },
-  "dependencies": {
-    "discord-eco": "^0.0.10",
-    "discord.js": "^11.4.2",
-    "express": "^4.16.3"
-  },
-  "engines": {
-    "node": "8.x"
-  },
-  "repository": {
-    "url": "https://glitch.com/edit/#!/hello-express"
-  },
+  "author": "Barış Demirci",
   "license": "MIT",
-  "keywords": [
-    "node",
-    "glitch",
-    "express"
-  ]
+  "dependencies": {
+    "discord.js": "^11.4.2",
+    "ffmpeg-binaries": "^4.0.0",
+    "opusscript": "0.0.6",
+    "simple-youtube-api": "^5.0.2",
+    "ytdl-core": "^0.26.3"
+  }
 }
